# SkypeAgenda

./: Abonat.h  Abonat_Skype.cpp  Abonat_Skype.h  Abonat_Skype_Extern.cpp  Abonat_Skype_Extern.h  Abonat_Skype_Romania.cpp  Abonat_Skype_Romania.h  Agenda.cpp  Agenda.h  AgendaExterna.cpp  AgendaExterna.h  CMakeLists.txt  Persoana.cpp  Persoana.h  README.md
