cmake_minimum_required(VERSION 3.17)
project(SkypeAgenda)

set(CMAKE_CXX_STANDARD 14)

add_executable(SkypeAgenda main.cpp Persoana.h Persoana.cpp AgendaExterna.h AgendaExterna.cpp Agenda.h Agenda.cpp Abonat_Skype_Romania.h Abonat_Skype_Romania.cpp Abonat_Skype_Extern.h Abonat_Skype_Extern.cpp Abonat_Skype.h Abonat_Skype.cpp Abonat.h)